Cleaned up some files.